--- a/Bài3/index.html
+++ b/Bài3/index.html
@@ -4,10 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cửa hàng Cà phê Mocha House</title>
-</head>
+  <link rel="stylesheet" href="style.css">
+</head> 
 <body>
   <!-- Header -->
-  <header>
+ <header>
     <h1>Cửa hàng Cà phê Mocha House</h1>
     <nav>
       <ul>
@@ -25,6 +26,14 @@
       <h2>Chào mừng đến với Mocha House!</h2>
       <p>Chúng tôi mang đến cho bạn những hương vị cà phê rang xay nguyên chất, đậm đà và thơm ngon nhất.</p>
     </section>
+
+    <!-- Thanh tìm kiếm và nút thêm -->
+    <section id="controls" style="text-align:center; margin: 20px 0;">
+      <input type="text" id="searchInput" placeholder="Tìm kiếm sản phẩm..." style="padding:8px; width: 250px;">
+      <button id="searchBtn">Tìm</button>
+      <button id="addProductBtn">Thêm sản phẩm</button>
+    </section>
+
 
     <!-- Danh sách sản phẩm -->
     <section id="product-list">
@@ -68,11 +77,31 @@
         <button type="submit">Gửi</button>
       </form>
     </section>
+
+    <!-- Form thêm sản phẩm mới -->
+    <br>
+    <section id="add-section">
+      <form id="addProductForm" class="hidden">
+        <h3>Thêm sản phẩm mới</h3>
+
+        <label for="newName">Tên sản phẩm:</label>
+        <input type="text" id="newName" required>
+
+        <label for="newPrice">Giá:</label>
+        <input type="number" id="newPrice" required>
+
+        <label for="newDesc">Mô tả:</label>
+        <textarea id="newDesc" rows="3"></textarea>
+
+        <button type="submit">Thêm</button>
+      </form>
+    </section>
   </main>
 
   <!-- Footer -->
   <footer>
     <p>© 2025 Mocha House Coffee | Xuân Trường, Nam Định</p>
   </footer>
+  <script src="script.js"></script>
 </body>
 </html>
